syntax = "proto3";

package api;

option go_package = "pkg/api";
option java_multiple_files = true;

service ThumbnailService {
  rpc DownloadThumbnail(ThumbnailRequest) returns (ThumbnailResponse);
}

message ThumbnailRequest {
  string video_url = 1;      // URL видеоролика
}

message ThumbnailResponse {
  bytes image_data = 1;      // Данные изображения миниатюры
  string video_url = 2;      // URL видеоролика
  string cache_status = 3;    // Статус кэширования миниатюры
}